--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,10 @@
   color: white;
 }
 
+.Table {
+    align-items: inline;
+}
+
 .App-link {
   color: #61dafb;
 }
@@ -36,3 +40,4 @@
     transform: rotate(360deg);
   }
 }
+
